--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,10 @@
 Package: mojSuppression
 Title: Suppression Code for usage within the Ministry of Justice
-Version: 0.0.1
+Version: 0.0.2
 Authors@R: person("Thomas", "Hepworth", email = "thomas.hepworth@justice.gov.uk", role = c("aut", "cre"))
 Description: A collection of functions to allow users to suppress data programatically.
 Depends: R (>= 3.1.0)
-License: GPL-3 | file LICENSE
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
@@ -15,7 +15,8 @@ Imports:
     purrr,
     gtools,
     magrittr,
-    plyr
+    plyr,
+    rlang
 Collate: 
     'total_suppressors.R'
     'pseudo_suppression.R'
